Refactor: Thread 내 Draft 메세지 제거